--- a/sync-defaults-with-copier/actions.yml
+++ b/sync-defaults-with-copier/actions.yml
@@ -1,8 +1,19 @@
 name: "Sync Defaults with Copier"
 description: "Install Python and Copier"
+
+inputs:
+  python-version:
+    description: “The version of Python to use”
+    required: true
+
 runs:
   using: "composite"
   steps:
+    - id: setup-python
+      name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version:  ${{ inputs.python-version }}
 
     - id: install-copier
       name: Install Copier
