:gear: Updates actions to setup-python@v3 and pipx

--- a/copier-copy-action/action.yml
+++ b/copier-copy-action/action.yml
@@ -17,19 +17,19 @@ runs:
   steps:
     - id: setup-python
       name: Setup Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         cache: "pip"
         python-version:  ${{ inputs.python-version }}
 
-    - id: install-copier
-      name: Install Copier
-      run: |
-          python -m pip install --upgrade --no-cache-dir pip
-          python -m pip install --no-cache-dir copier
-      shell: bash
+    # - id: install-copier
+    #   name: Install Copier
+    #   run: |
+    #       python -m pip install --upgrade --no-cache-dir pip
+    #       python -m pip install --no-cache-dir copier
+    #   shell: bash
 
     - id: copier-update
       name: Update Defaults with Copier
-      run: copier --force copy ${{ inputs.copier-template-src }} ${{ inputs.copier-destination-path }}
+      run: pipx run copier --force copy ${{ inputs.copier-template-src }} ${{ inputs.copier-destination-path }}
       shell: bash
