--- a/copier-copy-action/action.yml
+++ b/copier-copy-action/action.yml
@@ -19,15 +19,8 @@ runs:
       name: Setup Python
       uses: actions/setup-python@v3
       with:
-        cache: "pip"
+        # cache: "pip"
         python-version:  ${{ inputs.python-version }}
-
-    # - id: install-copier
-    #   name: Install Copier
-    #   run: |
-    #       python -m pip install --upgrade --no-cache-dir pip
-    #       python -m pip install --no-cache-dir copier
-    #   shell: bash
 
     - id: copier-update
       name: Update Defaults with Copier
