--- a/copier-update-action/action.yml
+++ b/copier-update-action/action.yml
@@ -3,8 +3,9 @@ description: "Install Python and Copier"
 
 inputs:
   python-version:
+    default: "3.9"
     description: “The version of Python to use”
-    required: true
+    required: false
 
 runs:
   using: "composite"
@@ -13,7 +14,7 @@ runs:
       name: Setup Python
       uses: actions/setup-python@v3
       with:
-        python-version:  ${{ inputs.python-version }}
+        python-version: ${{ inputs.python-version }}
 
     - id: copier-update
       name: Update Defaults with Copier
